--- a/README
+++ b/README
@@ -7,7 +7,7 @@ branch表示版本提交的日期。
 
 2.服务器部署采取先增后减的策略：
 
-  （1）从需求量最大的一个消费者的代理节点开始部署第一个服务器，运行spfa算法。
+  （1）从需求量最大的一个消费者的代理节点开始部署第一个服务器，对spfa算法做改进。
       后续不断增加服务器，并优先满足需求量较多的消费者。
       直到所有的消费者需求都被满足。
       
